[project]
name = "evdev3_utilities"
version = "0.1.0"
description = "Useful structure inspection tools from evdev3"
authors = [
    { name="Evan Woods", email="evanwoods.contact@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
license = { text = "MIT" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


